test_scores/negative_dimers/features/P29144.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P29144.pkl.xz